# surveillance-system-clean

./: .gitignore  apply-video-fix.sh  autonomous-rtsp-manager.js  config.json  deploy-optimization.sh  diagnostics.cjs  fix_electron_server.sh  hash-generator.js  integrate_real_rtsp.sh  local_electron_setup.sh  nano  package-lock.json  package.json  reload_interface.sh  restore_original_interface.sh  rtsp-server.js  rtsp-stream-manager.js  save_and_build.sh  save_and_push.sh  test_rtsp_stream.sh  vite.config.js  web-server.cjs  web-server.js  windows_check_script.sh
rtsp-monitor-electron/: README.md  autonomous-server.js.backup_20250716_220256  build-all.sh  build-linux.sh  build-windows.sh  electron-main.js  fix_stream_routes.patch  force-new-interface.patch  hls-handler.js  hls_direct_config.json  index-fallback.html  index.html  index.html.backup_20250716_213920  index.html.debug_backup  optimized-rtsp-decoder.js  package-lock.json  package.json  quick-deploy.sh  rtsp-decoder.js  rtsp-decoder.mjs  rtsp-server-hls-fix.patch  rtsp-server.js.broken  rtsp-server.js.old  rtsp-server.mjs  run-electron.sh  server-patch.js  simple-server.js  test-hls-direct.html  test-hls-local.html  test-hls.html  test-interface.html  test-optimized.sh  test-server-update.js  test-video-streaming.sh  test_hls_streaming.sh  update-cameras.js  update_stream_handler.js
rtsp-monitor-electron/assets/: tray.png.txt
src/: debug-client.html  index-web.html  index.html  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs
(+2 files in other folders)
