[package]
name = "surveillance-system"
version = "0.1.0"
edition = "2021"

[dependencies]
# Основа Tauri - обязательно
tauri = { version = "1.5", features = [ "api-all"] }
log = "0.4"
once_cell = "1.19"

# Сериализация данных - обязательно
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Асинхронность - обязательно
tokio = { version = "1.0", features = ["full"] }

# Для HTTP запросов (Nextcloud)
reqwest = { version = "0.11", features = ["json"] }

# Обработка ошибок
anyhow = "1.0"
thiserror = "1.0"

# Утилиты
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
dirs = "5.0"

# Для работы с паролями
bcrypt = "0.15"

# Логирование
env_logger = "0.10"

# FFmpeg (опционально - можно включить позже)
# ffmpeg-next = { version = "6.0", optional = true }

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

# Фичи (пока не нужны)
[features]
default = []
